@@ -79,6 +79,12 @@ outside of this region is not rendered.
 
 <!--status-->
 
+<p>The following features are at risk: &hellip;
+
+<ol>
+  <li>The property values <var>child</var> and <var>&lt;child-selector&gt;</var> on the 'mask-image' and 'clip-path' properties.</li>
+</ol>
+
 <h2 class="no-num no-toc" id="contents">
 Table of contents</h2>
 
@@ -309,7 +315,7 @@ element. Where:
     A URL reference to a <a>'mask element'</a> element (for example ''url(commonmasks.svg#mask)'') or to a
     CSS image.
   </dd>
-  <dt>''child''</dt>
+  <dt><dfn>''child''</dfn></dt>
   <dd>
     A keyword to indicate that the last direct child <a>'mask element'</a>
     element of the element the 'mask-image' property is applied should be used as the mask source. It is equivalent to
