@@ -149,6 +149,16 @@
    6 of the W3C Patent Policy</a>.</p>
   <!--end-status-->
 
+  <p>The following features are at risk: …
+
+  <ol>
+   <li>The property values <a href="#child"><var>child</var></a> and <a
+    href="#ltchild-selectorgt"><var>&lt;child-selector&gt;</var></a> on the
+    ‘<a href="#mask-image"><code class=property>mask-image</code></a>’
+    and ‘<a href="#clip-path"><code class=property>clip-path</code></a>’
+    properties.
+  </ol>
+
   <h2 class="no-num no-toc" id=contents> Table of contents</h2>
   <!--begin-toc-->
 
@@ -581,7 +591,8 @@
 
   <pre class=prod><var><dfn
    id=ltmask-sourcegt>&lt;mask-source&gt;</dfn></var> = <a
-   href="#lturlgt"><var>&lt;url&gt;</var></a> | <var>child</var> | <a
+   href="#lturlgt"><var>&lt;url&gt;</var></a> | <a
+   href="#child"><var>child</var></a> | <a
    href="#ltchild-selectorgt"><var>&lt;child-selector&gt;</var></a></pre>
 
   <pre class=prod><dfn
@@ -595,7 +606,7 @@
     class=element-name>&lt;mask></code></a> element (for example ‘<code
     class=css>url(commonmasks.svg#mask)</code>’) or to a CSS image.
 
-   <dt>‘<code class=css>child</code>’
+   <dt><dfn id=child>‘<code class=css>child</code>’</dfn>
 
    <dd> A keyword to indicate that the last direct child <a
     href="#MaskElement"><code class=element-name>&lt;mask></code></a> element
@@ -2697,7 +2708,8 @@ div {
    <var>clipping path</var>.
 
   <pre class=prod><dfn id=ltclip-sourcegt>&lt;clip-source&gt;</dfn> = <a
-   href="#lturlgt"><var>&lt;url&gt;</var></a> | <var>child</var> | <a
+   href="#lturlgt"><var>&lt;url&gt;</var></a> | <a
+   href="#child"><var>child</var></a> | <a
    href="#ltchild-selectorgt"><var>&lt;child-selector&gt;</var></a>
 </pre>
 
@@ -2714,7 +2726,7 @@ div {
     rect</a> width and height. (See <a href="#CSS-SHAPES"
     rel=biblioentry>[CSS-SHAPES]<!--{{!CSS-SHAPES}}--></a>.)
 
-   <dt>‘<code class=css>child</code>’
+   <dt>‘<a href="#child"><code class=css>child</code></a>’
 
    <dd> A keyword to indicate that the last direct child <a
     href="#ClipPathElement"><code class=element-name>&lt;clipPath></code></a>
@@ -4368,6 +4380,9 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
     href="#bounding-client-rect0" title="section 7.1.">7.1.</a>, <a
     href="#bounding-client-rect1" title="section 7.1.">7.1.</a>, <a
     href="#bounding-client-rect2" title="section 7.5.">7.5.</a>
+
+   <li>‘<code class=css>child</code>’, <a href="#child"
+    title="section 5.1."><strong>5.1.</strong></a>
 
    <li>&lt;child-selector&gt;, <a href="#ltchild-selectorgt"
     title="section 5.1."><strong>5.1.</strong></a>
