@@ -1,4 +1,7 @@
 2013-09-13  Dirk Schulze  <dschulze@adobe.com>
+	Put child and child-selector values at risk.
+
+2013-09-13  Dirk Schulze  <dschulze@adobe.com>
 	Deferred multiple layers to the next level.
 	'mask' resets 'mask-box-image' properties.
 	Initial values for 'mask-repeat', 'mask-position' and 'mask-origin'
